# python

./: .gitignore  .pre-commit-config.yaml  README.md
perf_optimization/: README.md  benchmark.py  data_generator.py  optimized_service_v1.py  optimized_service_v2.py  pyproject.toml  slow_service.py
