[project]
name = "perf-optimization"
version = "0.1.0"
description = ""
authors = [
    {name = "Paula Ceccon",email = "paulaceccon@canva.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.12.13,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "faiss (>=1.5.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
